final analysis added.

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -434,8 +434,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análise final\n",
-    "\n"
+    "## Análise final\n",
+    "\n",
+    "O modelo que conseguiu a melhor acurácia na calissificação dos dados foi o K-Nearest_Neighbors com 87% de acurácia. Os dados de suporte no relatório final nos dá a informação de que as variáveis da classe x1 apresentam maior impacto no target com 169 ocorrências no dataset. A precisão dessa classe de 89% mostra uma alta porcentagem de acerto do modelo na sua classificação."
    ]
   },
   {
